; ModuleID = '/home/carl/AnghaBench/tmux/extr_options.c_options_get_style.c'
source_filename = "/home/carl/AnghaBench/tmux/extr_options.c_options_get_style.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.style = type { i32 }
%struct.options = type { i32 }
%struct.options_entry = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { %struct.style }

@.str = private unnamed_addr constant [18 x i8] c"missing option %s\00", align 1
@.str.1 = private unnamed_addr constant [25 x i8] c"option %s is not a style\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.style* @options_get_style(%struct.options* %0, i8* %1) #0 {
  %3 = alloca %struct.options*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.options_entry*, align 8
  store %struct.options* %0, %struct.options** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.options*, %struct.options** %3, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call %struct.options_entry* @options_get(%struct.options* %6, i8* %7)
  store %struct.options_entry* %8, %struct.options_entry** %5, align 8
  %9 = load %struct.options_entry*, %struct.options_entry** %5, align 8
  %10 = icmp eq %struct.options_entry* %9, null
  br i1 %10, label %11, label %14

11:                                               ; preds = %2
  %12 = load i8*, i8** %4, align 8
  %13 = call i32 @fatalx(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i8* %12)
  br label %14

14:                                               ; preds = %11, %2
  %15 = load %struct.options_entry*, %struct.options_entry** %5, align 8
  %16 = call i32 @OPTIONS_IS_STYLE(%struct.options_entry* %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %21, label %18

18:                                               ; preds = %14
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @fatalx(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.1, i64 0, i64 0), i8* %19)
  br label %21

21:                                               ; preds = %18, %14
  %22 = load %struct.options_entry*, %struct.options_entry** %5, align 8
  %23 = getelementptr inbounds %struct.options_entry, %struct.options_entry* %22, i32 0, i32 0
  %24 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %23, i32 0, i32 0
  ret %struct.style* %24
}

declare dso_local %struct.options_entry* @options_get(%struct.options*, i8*) #1

declare dso_local i32 @fatalx(i8*, i8*) #1

declare dso_local i32 @OPTIONS_IS_STYLE(%struct.options_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
